chore: Update Vercel rewrite rule property names from `src`/`dest` to `source`/`destination`.

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
     ],
     "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "main.py"
+            "source": "/(.*)",
+            "destination": "main.py"
         }
     ]
 }
